Changed the name of the app to be shorter

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
     - main
 
 env:
-  UNIQUE_APP_NAME: orleanscartapp
+  UNIQUE_APP_NAME: orleansapp
   AZURE_RESOURCE_GROUP_NAME: orleans-dev-rg
   AZURE_RESOURCE_GROUP_LOCATION: northeurope
 
