--- a/Silo/Orleans.ShoppingCart.Silo.csproj
+++ b/Silo/Orleans.ShoppingCart.Silo.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Microsoft.Orleans.Server" Version="7.0.0" />
     
     <PackageReference Include="MudBlazor" Version="6.2.0" />
+    
+    <PackageReference Include="OrleansDashboard" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
